# cmake-qt5widgets-macos

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
